antsurance/force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
</CustomObject>