antsurance/force-app/main/default/objects/Contact/fields/Household_Role__c.field-meta.xml
<CustomField>
    <fullName>Household_Role__c</fullName>
    <description>This person's place in their household. Blank for business contacts.</description>
    <label>Household Role</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Head of Household</fullName>
            </value>
            <value>
                <fullName>Spouse or Partner</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
            <value>
                <fullName>Other Household Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>