antsurance/force-app/main/default/objects/Contact/fields/Licensed_Driver__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Driver__c</fullName>
    <description>Holds a driver license, so can be rated as a driver on an auto policy.</description>
    <label>Licensed Driver</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>