antsurance/force-app/main/default/objects/Contact/fields/Primary_Member__c.field-meta.xml
<CustomField>
    <fullName>Primary_Member__c</fullName>
    <description>The main person Antsurance deals with for this household or business.</description>
    <label>Primary Member</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>